--- a/projets/calculatrice.html
+++ b/projets/calculatrice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="retour">
-	<a href="../index.html/">Retourner au menu principale</a>
+	<a href="../index.html">Retourner au menu principale</a>
 	</div>
     <form>
 		<div id="digit1">
